@@ -1,5 +1,8 @@
 2003-05-08  Matti Aarnio  <mea@zmailer.org>
 
+	* configure.in, include/zresolv.h:
+	    Solaris 2.6 oops.. u_int16_t isn't known type there..
+
 	* transports/sm/sm.c, transports/mailbox/mailbox.c,
 	  router/daemonsub.c, scheduler/transport.c,
 	  smtpserver/smtpserver.c, smtpserver/smtpserver.h:
